--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en"  ng-app="plunker">
 <head>
   <meta charset="utf-8">
-  <title>Shatterblock</title>
+  <title>Shatterblok</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
