--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,9 @@
       function opensubsidemenu() {
           document.getElementById("subsidemenuDropdown").classList.toggle("submenushow");
       }
+      function opensubsidemenu() {
+        document.getElementById("subsidemenuDropdown3").classList.toggle("submenushow");
+      }
 
       window.onclick = function(event) {
           if (!event.target.matches('.opensubsidemenu')) {
