--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <script type="text/javascript">
 
       function menuonload() {
-          document.getElementsByClassName('closebtn')[0].style.visibility='hidden';
+          document.getElementsByClassName('closebtn')[0].style.visibility='hidden';``
           document.getElementsByClassName('newnavcls')[0].style.visibility='visible';
       }
       window.onload = menuonload;
